[metadata]
name = melee-env
version = 0.30.0
author = David Jones
author_email = d.t.jones@outlook.com
description = A gym-esque environment for Super Smash Bros. Melee. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidtjones/melee-env
project_urls =
    Bug Tracker = https://github.com/davidtjones/melee-env/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = 
    melee_env
    melee_env.agents
python_requires = >=3.6
install_requires=
    melee >= 0.30.3
    requests >= 2.20
    tqdm >= 4.14
include_package_data = True
